# cnd-handson

chapter04_opentelemetry/sample-app/src/color.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chapter05_argocd/ingress/: ingress.yaml
chapter08_argo-rollouts/app/canary/: ingress.yaml  rollout.yaml
chapter_argo-rollouts/: README.md
chapter_argocd/: README_cli.md  README_webui.md
chapter_cilium/: README.md
chapter_cluster-create/: README.md
chapter_grafana/: README.md
chapter_hubble/: README.md
chapter_istio/: README.md
chapter_istio-ambientmesh/: README.md
chapter_istio/networking/: http-request-based-routing.yaml  service-entry-example-com.yaml  simple-routing-inject-delay.yaml  simple-routing-inject-error.yaml
chapter_kubernetes/: README.md
chapter_kubernetes/manifest/: blue-green.yaml  hello-world-ingress.yaml  rollout.yaml
chapter_loki/: README.md
chapter_opentelemetry/: README.md
chapter_prometheus/: README.md
chapter_pyroscope/: README.md  ingress.yaml
chapter_setup/: README.md
chapter_tempo/: README.MD
sample-app/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sample-app/.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
sample-app/docker/: Dockerfile.redis  redis.conf
sample-app/src/: database.py  main.py
sample-app/src/logger/: logger.py  logging_override.ini
sample-app/tests/: test_main.py
